@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-DNS-SEC
-version:            0.17_4
+version:            0.17_5
 abstract:           DNSSEC extensions to Net::DNS
 author:
     - Olaf M. Kolkman <olaf@net-dns.org>
