@@ -4,6 +4,9 @@ Revision history for Perl extension Net::DNS::SEC.
 
    Recode RR implementations to provide Net::DNS 0.69+ interface.
 
+   Fix: rt.cpan.org #95034
+   Failure to parse NSEC3PARAM record with null salt
+
    Fix: rt.cpan.org #81289
    Failure to handle GOST DS records
 
@@ -454,7 +457,7 @@ Net::DNS. The history of those is documented below.
 
 0.19-DNSSEC-0.3: 
   Solved patch problems that where due to the 
-  $Id: Changes 1170 2014-02-10 10:42:45Z willem $ in headers not 
+  $Id: Changes 1193 2014-04-28 07:11:19Z willem $ in headers not 
   being from the original distribution.
 
   Added DSA signature creation
@@ -486,4 +489,4 @@ Net::DNS. The history of those is documented below.
 
 
 ---------------------------------------------------------------------------
-$Id: Changes 1170 2014-02-10 10:42:45Z willem $
+$Id: Changes 1193 2014-04-28 07:11:19Z willem $
